# Naive-RAG

./: Dockerfile  config.toml  pyproject.toml  requirements.txt
src/: app.py  note.ipynb
src/modules/: __init__.py  config.py  embedder.py  vector_store.py
src/modules/doc_actions/: __init__.py  add_docs_to_db.py  doc_actions.py
